// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot 1`] = `
<div>
  <div
    class="rdp-calendar"
    id="test"
  >
    <div
      class="rdp-months"
    >
      <div
        aria-label=""
        class="rdp-nav"
        role="toolbar"
      >
        <button
          aria-controls="test"
          aria-label="Previous Month"
          class="rdp-button_previous"
          name="previous-month"
          type="button"
        >
          <svg
            class="rdp-chevron"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <polygon
              points="16 18.112 9.81111111 12 16 5.87733333 14.0888889 4 6 12 14.0888889 20"
            />
          </svg>
        </button>
        <button
          aria-controls="test"
          aria-label="Next Month"
          class="rdp-button_next"
          name="next-month"
          type="button"
        >
          <svg
            class="rdp-chevron"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <polygon
              points="8 18.612 14.1888889 12.5 8 6.37733333 9.91111111 4.5 18 12.5 9.91111111 20.5"
            />
          </svg>
        </button>
      </div>
      <div
        class="rdp-month"
      >
        <div
          class="rdp-month_caption"
          id="test-caption-0"
        >
          <span
            aria-live="polite"
            class="rdp-caption_label"
            role="status"
          >
            June 2020
          </span>
        </div>
        <table
          aria-label="June 2020"
          aria-multiselectable="true"
          class="rdp-month_grid"
          role="grid"
        >
          <thead>
            <tr
              aria-rowindex="1"
              class="rdp-weekdays"
              role="row"
            >
              <th
                aria-colindex="1"
                aria-label="Sunday"
                class="rdp-weekday"
                role="columnheader"
              >
                Su
              </th>
              <th
                aria-colindex="2"
                aria-label="Monday"
                class="rdp-weekday"
                role="columnheader"
              >
                Mo
              </th>
              <th
                aria-colindex="3"
                aria-label="Tuesday"
                class="rdp-weekday"
                role="columnheader"
              >
                Tu
              </th>
              <th
                aria-colindex="4"
                aria-label="Wednesday"
                class="rdp-weekday"
                role="columnheader"
              >
                We
              </th>
              <th
                aria-colindex="5"
                aria-label="Thursday"
                class="rdp-weekday"
                role="columnheader"
              >
                Th
              </th>
              <th
                aria-colindex="6"
                aria-label="Friday"
                class="rdp-weekday"
                role="columnheader"
              >
                Fr
              </th>
              <th
                aria-colindex="7"
                aria-label="Saturday"
                class="rdp-weekday"
                role="columnheader"
              >
                Sa
              </th>
            </tr>
          </thead>
          <tbody
            class="rdp-weeks"
            role="rowgroup"
          >
            <tr
              aria-rowindex="2"
              class="rdp-week"
              role="row"
            >
              <td
                aria-colindex="1"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
              >
                <button
                  aria-label="Sunday, May 31st, 2020"
                  class="rdp-day_date"
                  data-day="2020-05-31"
                  data-hidden="true"
                  data-month="2020-05"
                  tabindex="-1"
                >
                  31
                </button>
              </td>
              <td
                aria-colindex="2"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Monday, June 1st, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-01"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  1
                </button>
              </td>
              <td
                aria-colindex="3"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Tuesday, June 2nd, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-02"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  2
                </button>
              </td>
              <td
                aria-colindex="4"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Wednesday, June 3rd, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-03"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  3
                </button>
              </td>
              <td
                aria-colindex="5"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Thursday, June 4th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-04"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  4
                </button>
              </td>
              <td
                aria-colindex="6"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Friday, June 5th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-05"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  5
                </button>
              </td>
              <td
                aria-colindex="7"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Saturday, June 6th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-06"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  6
                </button>
              </td>
            </tr>
            <tr
              aria-rowindex="3"
              class="rdp-week"
              role="row"
            >
              <td
                aria-colindex="1"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Sunday, June 7th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-07"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  7
                </button>
              </td>
              <td
                aria-colindex="2"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Monday, June 8th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-08"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  8
                </button>
              </td>
              <td
                aria-colindex="3"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Tuesday, June 9th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-09"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  9
                </button>
              </td>
              <td
                aria-colindex="4"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Wednesday, June 10th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-10"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  10
                </button>
              </td>
              <td
                aria-colindex="5"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Thursday, June 11th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-11"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  11
                </button>
              </td>
              <td
                aria-colindex="6"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Friday, June 12th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-12"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  12
                </button>
              </td>
              <td
                aria-colindex="7"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Saturday, June 13th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-13"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  13
                </button>
              </td>
            </tr>
            <tr
              aria-rowindex="4"
              class="rdp-week"
              role="row"
            >
              <td
                aria-colindex="1"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Sunday, June 14th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-14"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  14
                </button>
              </td>
              <td
                aria-colindex="2"
                aria-selected="true"
                class="rdp-day rdp-range_start rdp-selected"
                role="gridcell"
              >
                <button
                  aria-label="Monday, June 15th, 2020, selected"
                  class="rdp-day_date"
                  data-day="2020-06-15"
                  data-month="2020-06"
                  data-selected="true"
                  tabindex="-1"
                >
                  15
                </button>
              </td>
              <td
                aria-colindex="3"
                aria-selected="true"
                class="rdp-day rdp-range_middle rdp-selected"
                role="gridcell"
              >
                <button
                  aria-label="Tuesday, June 16th, 2020, selected"
                  class="rdp-day_date"
                  data-day="2020-06-16"
                  data-month="2020-06"
                  data-selected="true"
                  tabindex="-1"
                >
                  16
                </button>
              </td>
              <td
                aria-colindex="4"
                aria-selected="true"
                class="rdp-day rdp-range_middle rdp-selected"
                role="gridcell"
              >
                <button
                  aria-label="Wednesday, June 17th, 2020, selected"
                  class="rdp-day_date"
                  data-day="2020-06-17"
                  data-month="2020-06"
                  data-selected="true"
                  tabindex="-1"
                >
                  17
                </button>
              </td>
              <td
                aria-colindex="5"
                aria-selected="true"
                class="rdp-day rdp-range_middle rdp-selected"
                role="gridcell"
              >
                <button
                  aria-label="Thursday, June 18th, 2020, selected"
                  class="rdp-day_date"
                  data-day="2020-06-18"
                  data-month="2020-06"
                  data-selected="true"
                  tabindex="-1"
                >
                  18
                </button>
              </td>
              <td
                aria-colindex="6"
                aria-selected="true"
                class="rdp-day rdp-range_end rdp-selected"
                role="gridcell"
              >
                <button
                  aria-label="Friday, June 19th, 2020, selected"
                  class="rdp-day_date"
                  data-day="2020-06-19"
                  data-month="2020-06"
                  data-selected="true"
                  tabindex="-1"
                >
                  19
                </button>
              </td>
              <td
                aria-colindex="7"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Saturday, June 20th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-20"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  20
                </button>
              </td>
            </tr>
            <tr
              aria-rowindex="5"
              class="rdp-week"
              role="row"
            >
              <td
                aria-colindex="1"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Sunday, June 21st, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-21"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  21
                </button>
              </td>
              <td
                aria-colindex="2"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Monday, June 22nd, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-22"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  22
                </button>
              </td>
              <td
                aria-colindex="3"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Tuesday, June 23rd, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-23"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  23
                </button>
              </td>
              <td
                aria-colindex="4"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Wednesday, June 24th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-24"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  24
                </button>
              </td>
              <td
                aria-colindex="5"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Thursday, June 25th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-25"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  25
                </button>
              </td>
              <td
                aria-colindex="6"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Friday, June 26th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-26"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  26
                </button>
              </td>
              <td
                aria-colindex="7"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Saturday, June 27th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-27"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  27
                </button>
              </td>
            </tr>
            <tr
              aria-rowindex="6"
              class="rdp-week"
              role="row"
            >
              <td
                aria-colindex="1"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Sunday, June 28th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-28"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  28
                </button>
              </td>
              <td
                aria-colindex="2"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Monday, June 29th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-29"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  29
                </button>
              </td>
              <td
                aria-colindex="3"
                class="rdp-day"
                role="gridcell"
              >
                <button
                  aria-label="Tuesday, June 30th, 2020"
                  class="rdp-day_date"
                  data-day="2020-06-30"
                  data-month="2020-06"
                  tabindex="-1"
                >
                  30
                </button>
              </td>
              <td
                aria-colindex="4"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
              >
                <button
                  aria-label="Wednesday, July 1st, 2020"
                  class="rdp-day_date"
                  data-day="2020-07-01"
                  data-hidden="true"
                  data-month="2020-07"
                  tabindex="-1"
                >
                  1
                </button>
              </td>
              <td
                aria-colindex="5"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
              >
                <button
                  aria-label="Thursday, July 2nd, 2020"
                  class="rdp-day_date"
                  data-day="2020-07-02"
                  data-hidden="true"
                  data-month="2020-07"
                  tabindex="-1"
                >
                  2
                </button>
              </td>
              <td
                aria-colindex="6"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
              >
                <button
                  aria-label="Friday, July 3rd, 2020"
                  class="rdp-day_date"
                  data-day="2020-07-03"
                  data-hidden="true"
                  data-month="2020-07"
                  tabindex="-1"
                >
                  3
                </button>
              </td>
              <td
                aria-colindex="7"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
              >
                <button
                  aria-label="Saturday, July 4th, 2020"
                  class="rdp-day_date"
                  data-day="2020-07-04"
                  data-hidden="true"
                  data-month="2020-07"
                  tabindex="-1"
                >
                  4
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="rdp-footer"
    >
      <p>
        June 15th, 2020
        –
        June 19th, 2020
      </p>
    </div>
  </div>
</div>
`;

exports[`when a day in the range is clicked when the day is clicked again when a day in the range is clicked again should match the snapshot 1`] = `
<div>
  <div
    class="rdp-calendar"
    id="test"
  >
    <div
      class="rdp-months"
    >
      <div
        class="rdp-nav"
        role="toolbar"
      >
        <button
          aria-controls="test"
          aria-label="Previous Month"
          class="rdp-button_previous"
          name="previous-month"
          type="button"
        >
          <svg
            class="rdp-chevron"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <polygon
              points="16 18.112 9.81111111 12 16 5.87733333 14.0888889 4 6 12 14.0888889 20"
            />
          </svg>
        </button>
        <button
          aria-controls="test"
          aria-label="Next Month"
          class="rdp-button_next"
          name="next-month"
          type="button"
        >
          <svg
            class="rdp-chevron"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <polygon
              points="8 18.612 14.1888889 12.5 8 6.37733333 9.91111111 4.5 18 12.5 9.91111111 20.5"
            />
          </svg>
        </button>
      </div>
      <div
        class="rdp-month_grid"
      >
        <div
          class="rdp-month_caption"
          id="test-caption-0"
        >
          <span
            aria-label=""
            aria-live="polite"
            class="rdp-caption_label"
            role="status"
          >
            June 2020
          </span>
        </div>
        <div
          aria-labelledby="test-caption-0"
          aria-multiselectable="true"
          class="rdp-month"
          id="test-grid-0"
          role="grid"
        >
          <div
            aria-rowindex="1"
            class="rdp-weekdays"
            role="row"
          >
            <span
              aria-colindex="1"
              aria-label="Sunday"
              class="rdp-weekday"
              role="columnheader"
            >
              Su
            </span>
            <span
              aria-colindex="2"
              aria-label="Monday"
              class="rdp-weekday"
              role="columnheader"
            >
              Mo
            </span>
            <span
              aria-colindex="3"
              aria-label="Tuesday"
              class="rdp-weekday"
              role="columnheader"
            >
              Tu
            </span>
            <span
              aria-colindex="4"
              aria-label="Wednesday"
              class="rdp-weekday"
              role="columnheader"
            >
              We
            </span>
            <span
              aria-colindex="5"
              aria-label="Thursday"
              class="rdp-weekday"
              role="columnheader"
            >
              Th
            </span>
            <span
              aria-colindex="6"
              aria-label="Friday"
              class="rdp-weekday"
              role="columnheader"
            >
              Fr
            </span>
            <span
              aria-colindex="7"
              aria-label="Saturday"
              class="rdp-weekday"
              role="columnheader"
            >
              Sa
            </span>
          </div>
          <div
            class="rdp-weeks"
            role="rowgroup"
          >
            <div
              aria-rowindex="2"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-05-31"
                data-hidden="true"
                data-month="2020-05"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  31
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-01"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  1
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-02"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  2
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-03"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  3
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-04"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  4
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-05"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  5
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-06"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  6
                </span>
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-07"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  7
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-08"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  8
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-09"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  9
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-10"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  10
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-11"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  11
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-12"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  12
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-13"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  13
                </span>
              </div>
            </div>
            <div
              aria-rowindex="4"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-14"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  14
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-15"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  15
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-16"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  16
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-label=""
                class="rdp-day rdp-focused"
                data-day="2020-06-17"
                data-focused="true"
                data-month="2020-06"
                role="gridcell"
                tabindex="0"
              >
                <span
                  class="rdp-day_date"
                >
                  17
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-18"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  18
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-19"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  19
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-20"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  20
                </span>
              </div>
            </div>
            <div
              aria-rowindex="5"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-21"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  21
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-22"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  22
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-23"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  23
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-24"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  24
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-25"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  25
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-26"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  26
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-27"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  27
                </span>
              </div>
            </div>
            <div
              aria-rowindex="6"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-28"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  28
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-29"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  29
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-30"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  30
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-07-01"
                data-hidden="true"
                data-month="2020-07"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  1
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-07-02"
                data-hidden="true"
                data-month="2020-07"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  2
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-07-03"
                data-hidden="true"
                data-month="2020-07"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  3
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-07-04"
                data-hidden="true"
                data-month="2020-07"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  4
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rdp-footer"
    >
      <p>
        Please pick the first day.
      </p>
    </div>
  </div>
</div>
`;
